--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "@tanstack/react-query": "^5.61.0",
     "axios": "^1.7.7",
     "firebase": "^11.0.2",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
